[project]
name = "raivo_backup"
version = "1.0.0"
authors = [
  { name="Ross Patterson", email="ross.patterson@gmail.com" },
]
description = "Back up the Raivo authenticator database from iCloud"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
	"raivo",
]
dependencies = [
	"click",
	"contextlib",
	"os",
	"logging",
	"pyzipper",
	# "rap_pyicloud",
	"pyicloud",
	"shutil",
]

[project.urls]
"Homepage" = "https://github.com/RossPatterson/raivo_backup"
"Bug Tracker" = "https://github.com/RossPatterson/raivo_backup/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
